Made navbar static. Footer is always full-width on smaller resolutions. Fixed wizard wrapper padding and addressing.

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -50,12 +50,12 @@
 }
 
 /* Guidance Wizard styling */
-#wizard-wrapper > .hero-unit {
+.wizard-wrapper > .hero-unit {
   margin-bottom: 10px;
 }
 
 .stats-wrapper,
-#step-one {
+.wizard-wrapper {
   display: none;
 }
 
