--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,6 +45,7 @@ a {
   color: #FFA008 !important;
 }
 
+/* Main content styles */
 .main-wrapper {
   min-height: 100%;
   height: auto !important;
@@ -53,7 +54,7 @@ a {
 }
 
 #main {
-  padding-top: 45px;
+  padding-top: 10px;
 }
 
 .push {
@@ -138,4 +139,30 @@ footer p {
 footer a:hover {
   text-decoration: none;
   color: GhostWhite;
+}
+
+/* Responsive style modifications */
+
+/* Large desktop */
+@media (min-width: 1200px) {
+
+}
+ 
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) {
+
+}
+ 
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) {
+  /* Full width footer fix */
+  footer {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+}
+ 
+/* Landscape phones and down */
+@media (max-width: 480px) {
+
 }
